--- a/kobara-ob/Cargo.toml
+++ b/kobara-ob/Cargo.toml
@@ -3,6 +3,10 @@ name = "kobara-ob"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
+rust_decimal = "1.32"
+rust_decimal_macros = "1.32"
+
+[dev-dependencies]
+assert_matches = "1.5"
