--- a/kobara-ob/Cargo.toml
+++ b/kobara-ob/Cargo.toml
@@ -3,10 +3,22 @@ name = "kobara-ob"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 rust_decimal = "1.32"
 rust_decimal_macros = "1.32"
+tokio = { version = "1.0", features = ["full"] }
+tonic = "0.10"
+prost = "0.12"
+prost-types = "0.12"
+futures = "0.3"
 
 [dev-dependencies]
 assert_matches = "1.5"
+
+[build-dependencies]
+tonic-build = "0.10"
