--- a/kobara-ob/Cargo.toml
+++ b/kobara-ob/Cargo.toml
@@ -22,6 +22,8 @@ assert_matches = "1.5"
 criterion = "0.5"
 rand = "0.8"
 rust_decimal = { version = "1.32", features = ["rand"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 tonic-build = "0.10"
