--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,13 @@ jobs:
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
         with:
-          workspaces: kobara-ob
+          workspaces: atra-ob
       - name: Install Protobuf Compiler
         run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
       - name: Build Rust
-        run: cd kobara-ob && cargo build --verbose
+        run: cd atra-ob && cargo build --verbose
       - name: Run Rust tests
-        run: cd kobara-ob && cargo test --verbose
+        run: cd atra-ob && cargo test --verbose
       # CLI
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
@@ -37,7 +37,7 @@ jobs:
           cache: 'pip'
       - name: Install Python dependencies
         run: |
-          cd kobara-cli
+          cd atra-cli
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip list
@@ -49,7 +49,7 @@ jobs:
           which pip
       - name: Run Python tests
         run: |
-          cd kobara-cli
+          cd atra-cli
           python -m pip install pytest
           python -m pytest tests/ -v
 
@@ -70,16 +70,16 @@ jobs:
 
       - name: Install Python dependencies and generate protos
         run: |
-          cd kobara-cli
+          cd atra-cli
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
           mkdir -p generated
           python -m grpc_tools.protoc \
-            -I../kobara-proto/proto \
+            -I../atra-proto/proto \
             --python_out=./generated \
             --grpc_python_out=./generated \
-            ../kobara-proto/proto/orderbook.proto
+            ../atra-proto/proto/orderbook.proto
           sed -i 's/import orderbook_pb2/import generated.orderbook_pb2/' generated/orderbook_pb2_grpc.py
           touch generated/__init__.py
 
@@ -87,15 +87,15 @@ jobs:
 
       - name: Build and start orderbook
         run: |
-          docker build -t orderbook -f kobara-ob/Dockerfile .
+          docker build -t orderbook -f atra-ob/Dockerfile .
           docker compose up -d orderbook
           timeout 30s bash -c 'until docker compose ps | grep -q "healthy"; do sleep 1; done'
 
       - name: Run integration tests
         env:
-          kobara_OB_HOST: localhost
+          atra_OB_HOST: localhost
         run: |
-          cd kobara-cli
+          cd atra-cli
           chmod +x integration_tests.sh
           ./integration_tests.sh
 
