fix: cli.platform namespace conflict with pytest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,4 +103,4 @@ jobs:
         if: failure()
         run: |
           docker compose ps
-          docker compose logs orderbook
+          docker compose logs matcher
