--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,8 @@ jobs:
           cd cli
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
+          pip install -e . # install cli as a package
+          which atra
           mkdir -p generated
           python -m grpc_tools.protoc \
             -I../atra-proto/proto \
@@ -85,11 +86,6 @@ jobs:
           touch generated/__init__.py
 
           echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
-
-      - name: Install CLI as package
-        run: |
-          cd cli
-          pip install -e .
           
       - name: Prepare Docker Image Tags
         id: prep_tags
