fix: cli couldn't identify its installation method

--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -38,7 +38,7 @@ dev = [
 ]
 
 [tool.setuptools]
-packages = ["" = "src"]
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
